--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "keywords": [],
